<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DongHua</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="apiurl">http://www.hozhu.cn/MobileApi/MedioCategory/index/</string>
    <string name="endapi2">http://www.hozhu.cn/MobileApi/</string>
    <string name="endapi">http://www.cainiaojk.com/MobileApi/</string>
    <string name="tuijian">推荐</string>
    <string name="redian">热点</string>
    <string name="pindao">频道</string>
    <string name="guanggao">广告</string>
    <string name="gerenzh">个人账号</string>
    <string name="guangkanlis">观看历史</string>
    <string name="jianyifkui">建议反馈</string>
    <string name="sezhi">设置</string>
    <string name="yzdenglu">验证登录</string>
    <string name="fastdenglu">一键登录</string>
    <string name="shurushouji">输入手机号码，验证登录</string>
    <string name="shoujihao">手机号</string>
    <string name="yzma">验证码</string>
    <string name="touxiang">头像</string>
    <string name="nichen">昵称</string>
    <string name="xinbie">性别</string>
    <string name="nianling">年龄</string>
    <string name="gexinqianming">个性签名：</string>
    <string name="baocun">保存</string>
    <string name="yijiangfk">一键反馈</string>
    <string name="feiwifiuser">非WIFI环境使用</string>
    <string name="xxtongzhi">信息通知</string>
    <string name="mvtuisong">MV推送</string>
    <string name="guangyuyy">关于应用</string>
    <string name="jiancegxing">检测更新</string>

    <string name="shanglajiazai">上拉加载更多</string>
    <string name="xialashuaxin">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_footer_release_label">释放加载更多</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_refreshing_label">疯狂加载中\u2026</string>
    <string name="pull_to_refresh_refresh_time_label">更新于:%s</string>
    <string name="dianjiqiehengpin">全屏不显示该按扭，点击切换横屏</string>
    <string name="wmjiazaiship">正在玩命加载视频中。。。</string>

    <string name="APP_UPDATE_URL">app_update_url</string>
    <string name="register_re_send">%s秒后重发</string>
    <string name="register_get_verify">获取验证码</string>
    <string name="success_send_ver_code">发送验证短信成功,请查看短信~</string>
    <string name="error_send_verify">获取验证码失败~</string>
    <string name="error_verify">验证码错误,请重新获取验证码~</string>
    <string name="upload_surface_suc">上传头像成功~</string>

    <string name="SDcardPath">/Android/data/com.zscainiao.video_/</string>
    <string name="DataPath">/data/com.zscainiao.video_/cache/</string>
    <string name="PicPath">/ZHENHUA</string>
    <string name="do_gallery_get_pic_fail">无法打开图库</string>
    <string name="OnLine_LATITUDE">online_latitude</string>
    <string name="OnLine_LONGITUDE">online_longitude</string>

    <!-- 登录 -->
    <string name="userid">online_user_id</string>
    <string name="hash">hash</string>
    <string name="salt">OnLine_salt</string>
    <string name="token">OnLine_token</string>
    <string name="tokenid">OnLine_tokenid</string>
    <string name="servetime">OnLine_time</string>
    <string name="OnLine_nService_Time">OnLine_setvice_time</string>
    <string name="account">OnLine_strAccount</string>
    <string name="password">OnLine_strPswd</string>
    <string name="iflogin">iflg</string>
    <string name="ifoutlogin">ifoutlg</string>

    <string name="OnLine_PHOTO">online_photo</string>

    <string-array name="dialog_camera_item">
        <item>拍照</item>
        <item>相册</item>
        <item>取消</item>
    </string-array>

</resources>
