<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/myellow">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/gerenzh"
            android:textColor="@color/btpindaoziti"
            android:textSize="22dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/line_detail" />

    <RelativeLayout
        android:id="@+id/touxingre"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/touxiang"
            android:textColor="@color/btpindaoziti"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="123dp"
            android:layout_toRightOf="@+id/textView9"
            android:src="@drawable/ic_launcher" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/line_frame_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textVeiew9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/nichen"
            android:textColor="@color/btpindaoziti"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/nameet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:hint="name"
            android:textColor="@color/fubiaoti"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/line_frame_top" />

    <RelativeLayout
        android:id="@+id/relativeLayoutGender"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/teextVeiew9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/xinbie"
            android:textColor="@color/btpindaoziti"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/teextVeiew9"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:text="女"
            android:textColor="@color/fubiaoti"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/line_frame_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/teeextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/nianling"
            android:textColor="@color/btpindaoziti"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/ageet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:background="@null"
            android:hint="age"
            android:inputType="number"
            android:textColor="@color/fubiaoti"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/line_detail" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/gexinqianming"
            android:textColor="@color/btpindaoziti"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/qianmingget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView12"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/textView12"
            android:layout_toRightOf="@+id/textView12"
            android:background="@null"
            android:hint="用几句话介绍自己吧" />

        <TextView
            android:id="@+id/sumqmte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="选择地址" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView1"
            android:src="@drawable/detail" />

    </RelativeLayout>


</LinearLayout>
